@@ -1,5 +1,16 @@
 # Sample Activity
+Made by Eldiiar Dzhunusov
 
+Add JavaFX library:
+1) Ctrl+Shift+Alt+S
+Libraries -> add library 
+path->C:\javafx-sdk-11.0.2\lib (will depend)
+
+Add VM Options:
+Run-> Edit Configuration -> modify options -> add vm options
+--module-path C:\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml
+
+Add
 ## Image 1
 ![](img1.png)
 
